Open unnamed modules to avoid crashing when run without IDE